fix: Change users routes name
